fix: flex-wrap on all @media

--- a/style.css
+++ b/style.css
@@ -63,11 +63,14 @@ p {
     max-width: 260px;
     height: 260px;
     object-fit: cover;
-    margin: 10px;
+    margin: 15px;
     border: 2px solid transparent;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(195 204 209);
     border: none;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
 }
 
 .img content {
@@ -167,11 +170,14 @@ footer {
         height: 200px;
         max-width: 200px;
         object-fit: cover;
-        margin: 8px;
+        margin: 15px;
         border: 1px solid transparent;
         border-radius: 8px;
         box-shadow: 0 5px 11px rgba(195 204 209);
         border: none;
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: center;
 
     }
 }
@@ -182,25 +188,19 @@ footer {
         height: 180px;
         max-width: 180px;
         object-fit: cover;
-        margin: 5px;
+        margin: 15px;
         border: 1px solid transparent;
         border-radius: 4px;
         box-shadow: 0 3px 8px rgba(195 204 209);
         border: none;
-    }
-}
-
-@media (max-width: 560px) {
-    .img-div img {
+        flex-wrap: wrap;
         display: flex;
         justify-content: center;
-        align-items: center;
-        margin: 15px;
     }
 }
 
-@media (max-width: 450px) {
 
+@media (max-width: 450px) {
     .footer-icon {
         width: 40px;
     }
@@ -212,5 +212,16 @@ footer {
 
     header img {
         width: 60px;
+    }
+
+    .img-div img {
+        width: 100%;
+        height: 200px;
+        max-width: 200px;
+        object-fit: cover;
+        flex-wrap: wrap;
+        margin: 15px;
+        display: flex;
+        justify-content: center;
     }
 }
